windows phone fix overflow hidden on link

--- a/less/plugins/plugin-blog.less
+++ b/less/plugins/plugin-blog.less
@@ -94,6 +94,10 @@
             }
         }
 
+        .post-excerpt--full {
+            overflow: hidden;
+        }
+
 
 
 
@@ -253,7 +257,9 @@
     }
 
     p {
-        font-size: 16px;
+        @media @mobile {
+            font-size: 16px;
+        }
     }
 
     .post-footer p, 
